navbar z-index 10: fixed to display above the gradient overlay

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
 /* Navbar */
 .navbar {
     height: 5rem;
-    background-color: rgb(254, 243, 230, 0.5);
+    background-color: rgb(254, 243, 230);
+    z-index: 10;
 }
 
 .navbar-brand,
